--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>Hello World</h1>
+    <div class="text-center pt-16">
+      <h1 class="font-bold text-2xl">Color Changer</h1>
+      <div class="flex justify-center items-center pt-16">
+        <div id="colorChange" class="bg-yellow-500 w-80 h-80 pt-16"></div>
+      </div>
+      <h1 class="pt-16 font-bold text-2xl">Click the Box</h1>
     </div>
   </body>
   <script src="/function.js"></script>
